- On-Device AI: Integrated a local AI model to analyze screenshots for content, text, and links directly on the device.
- Smart File Discovery: Implemented a robust search to automatically find the screenshot folder on any Android device.

- AI-Powered Search: Added a semantic search bar that uses the AI to find screenshots based on their content, not just their filename.

- Modern UI: Built a responsive, high-performance interface including a virtualized grid for smooth scrolling and a detailed view modal.

- Background Processing: Moved all heavy AI analysis to a background worker to keep the UI fast and responsive at all times.

- State Management: Centralized all application data and logic using React Context for a clean and stable architecture.

- User Experience: Added native-like features such as pull-to-refresh, persistent search history, and comprehensive error handling.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@capacitor/preferences": "^7.0.0",
     "@capacitor/share": "^7.0.0",
     "@capacitor/dialog": "^7.0.0",
-    "@capacitor/core": "^7.1.4"
+    "@capacitor/core": "^7.1.4",
+    "@capacitor/browser": "^7.0.2",
+    "@tanstack/react-virtual": "^3.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
